bmg-ui-deployment/bmg-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bmg-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bmg-ui
  template:
    metadata:
      labels:
        app: bmg-ui
    spec:
      containers:
      - name: bmg-ui
        image: kamalberrybytes/adk-web-ui:v5
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: bmg-ui-service
  labels:
    app: bmg-ui
spec:
  selector:
    app: bmg-ui
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
