bmg-ui-deployment/bmg-ui-http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bmg-ui
spec:
  parentRefs:
  - name: agentgateway-proxy
    group: gateway.networking.k8s.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ui
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: bmg-ui-service
      port: 5000
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    backendRefs:
    - name: bmg-ui-service
      port: 5000
